Edit index.html and style.css to appropriately show the 4 info boxes. Final styling and spacing still to be done.

--- a/index.html
+++ b/index.html
@@ -27,16 +27,25 @@
                 </ul>
             </nav>
         </div>
+    </header>
         <div id="hero">
             <div id="box-one">
                 <h1 class="hero-title">This website is awesome</h1>
                 <p class="hero-p">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
                 <button class="hero-button">Sign Up</button>
             </div>
-        </div>
-        <div id="box-two">
+             <div id="box-two">
             <img class="hero-picture" src="Pictures/Hero-picture.jpeg" alt="copenhagen">
+            </div>
         </div>
-    </header>
+        <div class="info-box">
+        <h2 class="information-title">Some random information.</h2>
+        </div>
+        <div class="information">
+            <div class="b1"></div>
+            <div class="b2"></div>
+            <div class="b3"></div>
+            <div class="b4"></div>
+        </div>
 </body>
 </html>
