CTA box updated with correct colors and format

--- a/index.html
+++ b/index.html
@@ -47,5 +47,24 @@
             <div class="b3"></div>
             <div class="b4"></div>
         </div>
+        <div class="testimonial">
+            <div class="quote">
+                <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filing up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+            </div>
+            <div class="cite">
+                <cite>Thor, God of Thunder</cite>
+            </div>
+        </div>
+        <div class="cta">
+            <div class="cta-box">
+                <div class="cta-text-box">
+                    <h2 class="cta-title">Call to action! It's time!</h2>
+                    <p class="cta-text">Sign up for our product by clicking that button right over there!</p>
+                </div>
+                <div class="cta-botton-box">
+                    <button class="cta-botton">Sign Up</button>
+                </div>
+            </div>
+        </div>
 </body>
 </html>
