--- a/index.html
+++ b/index.html
@@ -40,12 +40,20 @@
         </div>
         <div class="info-box">
         <h2 class="information-title">Some random information.</h2>
-        </div>
         <div class="information">
-            <div class="b1"></div>
-            <div class="b2"></div>
-            <div class="b3"></div>
-            <div class="b4"></div>
+            <div class="b">
+            <span class="p">This is some subtext under an illustration or image</span>
+            </div>
+            <div class="b">
+            <span class="p">This is some subtext under an illustration or image</span>
+            </div>
+            <div class="b">
+            <span class="p">This is some subtext under an illustration or image</span>
+            </div>
+            <div class="b">
+            <span class="p">This is some subtext under an illustration or image</span>
+            </div>
+        </div>
         </div>
         <div class="testimonial">
             <div class="quote">
