--- a/index.html
+++ b/index.html
@@ -41,18 +41,16 @@
         <div class="info-box">
         <h2 class="information-title">Some random information.</h2>
         <div class="information">
-            <div class="b">
+            <div class="b"></div>
+            <div class="b"></div>
+            <div class="b"></div>
+            <div class="b"></div>
+        </div>
+        <div class="paragraph-container">
             <span class="p">This is some subtext under an illustration or image</span>
-            </div>
-            <div class="b">
             <span class="p">This is some subtext under an illustration or image</span>
-            </div>
-            <div class="b">
             <span class="p">This is some subtext under an illustration or image</span>
-            </div>
-            <div class="b">
             <span class="p">This is some subtext under an illustration or image</span>
-            </div>
         </div>
         </div>
         <div class="testimonial">
